@@ -146,18 +146,7 @@ option, select { font-size: 9pt; }
      <div id="i_panel">     
       <button onclick="toggle_i_panel('none');">close</button><br />
       <span fckLang="geshiHelp" id="geshiHelp">help</span> 	                
-      
-       There are two ways to create Geshi code blocks. 
-       <OL>
-       <LI>
-       You can paste your code directly into the editor, select it with mouse
-       or keyboard, then open this dialog.  Your text will appear in the text window below.  In some cases, in particular where the text has
-       already been marked up as a Geshi code block, the parser will not be able deal with the markup and this method will fail.
-       <LI>
-       You can open this dialog and paste the code into the text window below.   This method is <b>preferred</b> and will accept all forms
-       and styles of code.
-       </OL>
-       You can then edit your code and when finished, click OK.
+       <span fckLang = "GeshiInstructionList"</span>
        </div>      
        <button id="i_help" onclick="toggle_i_panel('block');"><span fckLang="geshiHelpButton" id="geshiHelpButton">Instructions</span></button><br />
 
