@@ -1,4 +1,4 @@
-rev 13-Sep_12-08_31
+rev 13-Sep_12-10_05
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -271,3 +271,5 @@ New lang string-- 'complex_tables'-- for editing window
 
 12 Sep
 Corrected fckconfig.js to use editor/lang/<iso.js> files for geshi and keyboard plugins.
+
+Updated language strings for Geshi plugin.
